fix checkbox alignment

--- a/client/src/components/CustomCheckbox.scss
+++ b/client/src/components/CustomCheckbox.scss
@@ -11,8 +11,8 @@
   // Box.
   & + label:before {
     content: "";
-    margin-right: 10px;
     margin-top: -3px;
+    margin-right: 10px;
     display: inline-block;
     vertical-align: text-top;
     width: 20px;
@@ -57,6 +57,7 @@
     left: 5px;
     top: 9px;
     background: white;
+    margin-top: -3px;
     width: 2px;
     height: 2px;
     box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
